--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,5 +22,11 @@
             alt="game-card-thumbnail" 
             class="game-card__thumb">
         </div>
+        <div class="game-card__description">
+            <p class="game-card__name">Name</p>
+            <div class="game-card__platforms">
+                <!-- <img src="" alt="" class="game-card__platform"> -->
+            </div>
+        </div>
     </div>
 </div>
