Added details page

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -94,6 +94,10 @@
     }
 
     &__platforms {
+      display: flex;
+    }
+
+    &__platform {
       width: 20px;
       margin-right: 10px;
     }
