--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,6 +4,7 @@
         <mat-select
             panelClass="filters-box__sort select"
             [(ngModel)]="sort"
+            (selectionChange)="onSortingChange(sort)"
         >
             <mat-option value="name">Name</mat-option>
             <mat-option value="-released">Released</mat-option>
@@ -16,17 +17,26 @@
     </mat-form-field>
 </div>
 <div class="games-box">
-    <div class="games-box__item game-card">
-        <div class="game-card__thumb-container">
-            <img src="https://media.rawg.io/media/resize/1280/-/games/456/456dea5e1c7e3cd07060c14e96612001.jpg"
-            alt="game-card-thumbnail" 
-            class="game-card__thumb">
-        </div>
-        <div class="game-card__description">
-            <p class="game-card__name">Name</p>
-            <div class="game-card__platforms">
-                <!-- <img src="" alt="" class="game-card__platform"> -->
+    <ng-container *ngFor="let game of games">
+        <div class="games-box__item game-card" (click)="openGameDetails(game.id)">
+            <div class="game-card__thumb-container">
+                <img 
+                *ngIf="game.background_image"
+                src="{{ game.background_image }}"
+                alt="game-card-thumbnail" 
+                class="game-card__thumb">
+                <p *ngIf="!game.background_image">No image</p>
             </div>
-        </div>
-    </div>
+            <div class="game-card__description">
+                <p class="game-card__name" title="{{ game.name }}">{{ game.name }}</p>
+                <div class="game-card__platforms">
+                    <img 
+                    *ngFor="let gamePlatform of game.parent_platforms"
+                    src="assets/images/platforms/{{ gamePlatform.platform.slug }}.svg" 
+                    alt="{{ gamePlatform.platform.slug }}" 
+                    class="game-card__platform">
+                </div>
+            </div>
+        </div> 
+    </ng-container>
 </div>
