--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,10 +1,10 @@
 <div class="search-box">
-    <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate class="search-box__form">
+    <form (ngSubmit)="onSubmit()" novalidate class="search-box__form">
         <span class="search-box__logo" routerLink="/">NgGDB</span>
         <input 
             type="text" 
             class="search-box__input"
-            ngModel
+            [formControl]="search"
             name="search"
             placeholder="Search games"
         />
