Added styles, new directives and integration with taigaUI

--- a/src/app/details/components/details/details.component.html
+++ b/src/app/details/components/details/details.component.html
@@ -1,37 +1,14 @@
-<div class="details" *ngIf="game">
-    <div class="details__banner-wrapper">
-        <img class="details__banner-img"
-        src="{{ game.background_image }}"
-        alt="bg-image"
-        />
+<section *ngIf="game" class="details-wrapper details">
+    <div class="details__desc description">
+        <h1 class="tui-text_h1 description__title">{{ game.name }}</h1>
+    
+    <h4 class="tui-text_h4 description__released">Release: {{ game.released | date }} <a *ngIf="game.metacritic" href="{{ game.metacritic_url }}" target="_blank" class="description__metacritic" [appMetacriticScore]="game.metacritic" >{{ game.metacritic }}</a> </h4>
+    <p class="description__genres">
+        <span class="tui-text_body-xl" *ngFor="let genre of game.genres; let last = last">
+            {{ genre.name }}<span *ngIf="!last">, </span>
+        </span>
+    </p>
     </div>
-    <div class="details__content description">
-        <div class="description__wrapper">
-            <div class="description__header">
-                <h1 class="description__title">{{ game.name }}</h1>
-                <h2 class="description__release-date">Release: {{ game.released | date }}</h2>
-                <p class="description__genres">
-                    <span *ngFor="let genre of game.genres; let last = last">
-                        {{ genre.name }}<span *ngIf="!last">, </span>
-                    </span>
-                </p>
-                <div class="description__gauge">
-                    <mwl-gauge
-                      class="two"
-                      [max]="100"
-                      [dialStartAngle]="180"
-                      [dialEndAngle]="0"
-                      [value]="gameRating"
-                      [animated]="true"
-                      [color]="getColor"
-                      [animationDuration]="2">
-                    </mwl-gauge>
-                    <a href="{{ game.metacritic_url }}" target="_blank" class="description__gauge-label">
-                        Metacritic
-                    </a>
-                </div>
-            </div>
-            <app-game-tabs [game]="game"></app-game-tabs>
-        </div>
-    </div>
-</div>
+    <app-game-tabs [game]="game"></app-game-tabs>
+    <div *ngIf="game.background_image" [appBgImage]="game.background_image" class="details-wrapper__banner"></div>
+</section>
