--- a/src/app/details/components/game-tabs/game-tabs.component.html
+++ b/src/app/details/components/game-tabs/game-tabs.component.html
@@ -1,4 +1,4 @@
-<div class="game-tabs" *ngIf="game">
+<!-- <div class="game-tabs" *ngIf="game">
     <mat-tab-group mat-align-tabs="start" backgroundColor="primary">
         <mat-tab label="About">
             <p *ngIf="game.parent_platforms?.length" class="game-tabs-par">
@@ -50,4 +50,4 @@
         </video>
         </mat-tab>
     </mat-tab-group>
-</div>
+</div> -->
