--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,42 +1,34 @@
-<div class="filters-box">
-    <mat-form-field>
-        <mat-label>Sort</mat-label>
-        <mat-select
-            panelClass="filters-box__sort select"
-            [(ngModel)]="sort"
-            (selectionChange)="onSortingChange(sort)"
-        >
-            <mat-option value="name">Name</mat-option>
-            <mat-option value="-released">Released</mat-option>
-            <mat-option value="-added">Added</mat-option>
-            <mat-option value="-created">Created</mat-option>
-            <mat-option value="-updated">Updated</mat-option>
-            <mat-option value="-rating">Rating</mat-option>
-            <mat-option value="metacritic">Metacritic</mat-option>
-        </mat-select>
-    </mat-form-field>
-</div>
-<div class="games-box">
-    <ng-container *ngFor="let game of games">
-        <div class="games-box__item game-card" (click)="openGameDetails(game.id)">
-            <div class="game-card__thumb-container">
-                <img 
-                *ngIf="game.background_image"
-                src="{{ game.background_image }}"
-                alt="game-card-thumbnail" 
-                class="game-card__thumb">
-                <p *ngIf="!game.background_image">No image</p>
+<div class="home-container tui-container tui-container_adaptive">
+    <div class="tui-row tui-row_adaptive home-container__filters-row">
+        <div class="tui-col_xs-12 tui-col_md-6 tui-col_lg-4">
+            <tui-select [(ngModel)]="sort" (ngModelChange)="onSortingChange(sort)">
+                Choose sorting type
+                <input tuiTextfield placeholder="Choose sort type" />
+                <tui-data-list-wrapper *tuiDataList [items]="selectSortItems">
+                </tui-data-list-wrapper>
+            </tui-select>
+        </div>
+    </div>
+    <div class="tui-row tui-row_adaptive cards-row">
+        <ng-container *ngFor="let game of games">
+            <div class="tui-col_xs-12 tui-col_md-6 tui-col_lg-4">
+                <a (click)="openGameDetails(game.id)" class="cards-row__item game-card" size="l" tuiIsland
+                    [hoverable]="true">
+                    <div *ngIf="game.metacritic" [appMetacriticScore]="game.metacritic" class="game-card__meta-rating">
+                        {{ game.metacritic }}
+                    </div>
+                    <div class="game-card__desc">
+                        <h3 class="tui-text_h4">{{ game.name }}</h3>
+                        <div class="game-card__platforms">
+                            <img *ngFor="let gamePlatform of game.parent_platforms"
+                                src="assets/images/platforms/{{ gamePlatform.platform.slug }}.svg"
+                                alt="{{ gamePlatform.platform.slug }}" class="game-card__platform">
+                        </div>
+                    </div>
+                    <div *ngIf="game.background_image" [appBgImage]="game.background_image" class="game-card__banner">
+                    </div>
+                </a>
             </div>
-            <div class="game-card__description">
-                <p class="game-card__name" title="{{ game.name }}">{{ game.name }}</p>
-                <div class="game-card__platforms">
-                    <img 
-                    *ngFor="let gamePlatform of game.parent_platforms"
-                    src="assets/images/platforms/{{ gamePlatform.platform.slug }}.svg" 
-                    alt="{{ gamePlatform.platform.slug }}" 
-                    class="game-card__platform">
-                </div>
-            </div>
-        </div> 
-    </ng-container>
+        </ng-container>
+    </div>
 </div>
