--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,60 +1,38 @@
-$main-color: #3f51b5;
-
-.search-box {
-    width: 100%;
-    height: 60px;
-    background-color: #323a45;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.site-header {
+    box-shadow: 0 .125rem 1rem rgba(0,0,0,.08);
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 4;
-
-    &__form {
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-
-    &__input {
-        margin-left: 10px;
-        padding: 10px;
-        width: 300px;
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
-        outline: none;
-        border: none;
-    }
-
-    &__submit {
-        border: none;
-        outline: none;
-        background: $main-color;
-        padding: 10px;
-        border-left: 1px solid rgba(0, 0, 0.3);
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
-        color: #fff;
-        font-weight: 700;
-        transition-duration: 0.3s;
-        cursor: pointer;
-
-        &:hover {
-            color: $main-color;
-            background-color: #fff;
-            border: 1px solid $main-color;
-        }
-
-    }
+    right: 0;
+    z-index: 1;
+    display: flex;
+    height: 5rem;
+    align-items: center;
+    padding: 0 1.25rem;
+    background: var(--tui-base-01);
+    border-bottom: 1px solid var(--tui-base-03);
 
     &__logo {
-        margin-left: 10px;
-        color: #fff;
-        font-weight: 700;
+        color: var(--tui-text-01);
+        position: absolute;
         text-decoration: none;
-        cursor: pointer;
-    }
 
+        @media screen and (max-width: 900px) {
+            display: none;
+        }
+    }
+}
+
+.search-form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    &__input {
+        width: 40%;
+
+        @media screen and (max-width: 900px) {
+            width: 100%;
+        }
+    }
 }
