--- a/src/app/components/page-not-found/page-not-found.component.scss
+++ b/src/app/components/page-not-found/page-not-found.component.scss
@@ -1,14 +1,10 @@
 .page-not-found {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 5;
+    width: 100%;
+    margin-top: 5rem;
+    height: calc(100vh - 5rem);
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #fff;
     font-weight: 700;
     font-size: 5vw;
 }
