--- a/src/app/details/components/details/details.component.scss
+++ b/src/app/details/components/details/details.component.scss
@@ -44,13 +44,23 @@
     &__released {
         display: flex;
         align-items: center;
-        justify-content: space-between;
     }
 
     &__metacritic {
         padding: 15px;
         text-decoration: none;
+        margin-left: 15px;
+    }
 
+    
+    &__platforms {
+        display: flex;
+    }
+
+    &__platform {
+        width: 40px;
+        height: 40px;
+        margin-right: 10px;
     }
 
 }
