Added linters and initialized ng lint

--- a/src/app/details/components/details/details.component.scss
+++ b/src/app/details/components/details/details.component.scss
@@ -1,3 +1,5 @@
+@import 'src/app/utils/mixins.scss';
+
 .details-wrapper {
     width: 100%;
     margin-top: 5rem;
@@ -7,29 +9,7 @@
     display: flex;
     align-items: flex-end;
 
-    &::after {
-        content: '';
-        display: block;
-        position: absolute;
-        z-index: -1;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(#000, .8);
-    }
-
-    &__banner {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: -2;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
+    @include make-banner('banner', #000, 0.8);
 }
 
 .details {
