--- a/src/app/shared/components/carousel/carousel.component.html
+++ b/src/app/shared/components/carousel/carousel.component.html
@@ -6,3 +6,5 @@
     </tui-carousel>
     <button tuiIconButton icon="tuiIconChevronRightLarge" title="Next" (click)="carousel.next()"></button>
 </div>
+
+<!-- неудачная попытка выделить компонент карусели с ng-content - TODO: разобраться, что не так -->
