--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,11 +9,5 @@
             </tui-select>
         </div>
     </div>
-    <div class="tui-row tui-row_adaptive cards-row">
-        <ng-container *ngFor="let game of games">
-            <div class="tui-col_xs-12 tui-col_md-6 tui-col_lg-4">
-                <app-game-card (clickEvent)="openGameDetails($event)" [game]="game" additionalClasses="cards-row__item"></app-game-card>
-            </div>
-        </ng-container>
-    </div>
+    <app-games-list [search]="search" [sort]="sort"></app-games-list>
 </div>
