--- a/src/app/details/components/game-tabs/game-tabs.component.html
+++ b/src/app/details/components/game-tabs/game-tabs.component.html
@@ -50,13 +50,10 @@
                 <tui-carousel #carousel class="carousel">
                     <ng-container *ngFor="let trailer of game.trailers">
                         <div *tuiItem class="screen-wrapper">
-                            <video
-                            class="game-screenshot"
-                            controls
-                        >
-                        <source src="{{ trailer.data?.max }}" type="video/mp4" />
-                        Your browser does not support the video tag.
-                    </video>
+                            <video class="game-screenshot" controls>
+                                <source src="{{ trailer.data?.max }}" type="video/mp4" />
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
                     </ng-container>
                 </tui-carousel>
